--- a/Assets/styles/index.css
+++ b/Assets/styles/index.css
@@ -361,6 +361,7 @@ header nav {
   /* Footer Styling */
 
   .footer {
+    width: 100vw;
     padding-top: 2rem;
     padding-bottom: 2rem;
     background-color: black;
