Fixing profile section
centering profile section for larger monitors

--- a/Assets/styles/index.css
+++ b/Assets/styles/index.css
@@ -33,6 +33,11 @@ body {
   margin-bottom: 10rem;
 }
 
+#InfoSection {
+  display: flex;
+  justify-content: center;
+}
+
 .sideXside {
   display: flex;
   flex-direction: row;
